Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-71583

MenuItem state with checkable MenuItem faulty

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.12.0
    • 5.11.3, 5.12.0 Beta 3
    • Quick: Controls 2
    • None
    • MacOS Mojave
    • macOS
    • fc1832810f6c09505d9413685ed0b2d6295bea4a (qt/qtquickcontrols2/5.12.0)

      I have a problem with Qt 5.12.0 Beta 3 with checkable MenuItems on MacOS Mojave:
      (Unable to reproduce this with Qt 5.11.1)

      ApplicationWindow {
          id: window
          visible: true
          width: 1280; height: 720
      
          menuBar: MenuBar {
              Menu {
                  title: "MainMenu"
                  MenuItem { text: "Cut"; checkable: true }
                  MenuItem { text: "Copy"; checkable: true }
                  MenuItem { text: "Paste"; checkable: true}
              }
          }
      }
      

       When opening the menu and clicking either MenuItem, the MainMenu popup closes, but the button remains "active", though closed. You have to click the button twice to open the menu again ("hidden close click" + click to open again).

      Either the popup should remain open (preferable actually in my case, but this is maybe a separate feature request), or the button needs to be non-active.

      See attached screenshots.

        1. Screenshot 2018-11-05 at 15.34.52.png
          8 kB
          Bartel Eerdekens
        2. Screenshot 2018-11-05 at 15.35.19.png
          11 kB
          Bartel Eerdekens
        3. Screenshot 2018-11-05 at 15.35.23.png
          8 kB
          Bartel Eerdekens
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mitch_curtis Mitch Curtis
            bartel Bartel Eerdekens
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes