src/quicktemplates2/qquickmenubar.cpp
@@ -95,7 +95,7 @@ void QQuickMenuBarPrivate::createItems()
     }
 }
 
-QQuickItem *QQuickMenuBarPrivate::beginCreateItem()
+QQuickItem *QQuickMenuBarPrivate::beginCreateItem(QQuickMenu *menu)
 {
     Q_Q(QQuickMenuBar);
     if (!delegate)
@@ -115,6 +115,8 @@ QQuickItem *QQuickMenuBarPrivate::beginCreateItem()
         return nullptr;
     }
 
+    if (QQuickMenuBarItem *menuBarItem = qobject_cast<QQuickMenuBarItem *>(item))
+        menuBarItem->setMenu(menu);
     item->setParentItem(q);
     QQml_setParent_noEvent(item, q);
 
@@ -131,9 +133,7 @@ void QQuickMenuBarPrivate::completeCreateItem()
 
 QQuickItem *QQuickMenuBarPrivate::createItem(QQuickMenu *menu)
 {
-    QQuickItem *item = beginCreateItem();
-    if (QQuickMenuBarItem *menuBarItem = qobject_cast<QQuickMenuBarItem *>(item))
-        menuBarItem->setMenu(menu);
+    QQuickItem *item = beginCreateItem(menu);
     completeCreateItem();
     return item;
 }
